2008-06-16  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/eglnative/clutter-stage-egl.c: Ignore any size allocation
	we receive from the user.

	* clutter/fruity/clutter-stage-fruity.c: Ditto as above.

2008-06-16  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c:
	(clutter_actor_move_anchor_point):
	(clutter_actor_move_anchor_pointu):
	(clutter_actor_move_anchor_point_from_gravity):
	Fixed incorrect sign of position adjustment.
	Fixed replace call to _move_by with move_byu in
	_move_anchor_pointu.

	Stripped trailing whitespace.

2008-06-15  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug #967 - Mismatch of Timeline::marker-reached signal signature

	* clutter/clutter-marshal.list:
	* clutter/clutter-timeline.c:
	(clutter_timeline_class_init): Fix the type of the frame_num
	argument in the ::marker-reached signal creation to match the
	signal class handler. (Armin Burgmeier)

2008-06-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* README: We depend on PangoCairo, now; also add all the missing
	release notes entries and the missing backends configuration notes.

2008-06-14  Matthew Allum  <mallum@openedhand.com>

	* README:
	Make needed GL version 1.4, note GLES2 support, add some notes
	for COGL.

2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Post release bump to 0.7.1.

======== Release 0.7.0 ========================================================

2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* README:
	* NEWS:
	* configure.ac: Release 0.7.0, "Booska".

2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* tests/test-cogl-offscreen.c:
	* tests/test-cogl-primitives.c:
	* tests/test-cogl-tex-convert.c:
	* tests/test-cogl-tex-foreign.c:
	* tests/test-cogl-tex-getset.c:
	* tests/test-cogl-tex-tile.c:
	* tests/test-layout.c:
	* tests/test-pixmap.c:
	* tests/test-texture-quality.c: Miscellaneous fixes for distcheck
	to pass.

2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: